==> SunnyChon/WS51/CodeExamples/WS51F6240/13-PWM 腑湍聆彸最唗/USER/Init.c <==
#include "Init.h"

#define T0MODE 1
#define T1MODE 1
#define T2MODE 0    //0：重载模式0   1：重载模式1   2：抓取模式   3：波特率产生器   4：时钟输出模式
#define T3MODE 4 


/******定时器0定时器模式初始化******/
//时钟是系统时钟的12分频
void Timer0_Init(void)
{
		switch(T0MODE)
		{
			//模式0：13位定时器，TL0的高3位无效
			case 0:	TMOD &= 0xF0;
							TH0 = (8192-2000)>>5;
							TL0 = (8192-2000) & 0x1F;
							break;
			//模式1：16位定时器
			case 1: TMOD |= 0x01;
							TH0 = (65536-2000)/256;//1.5ms
							TL0 = (65536-2000)%256;
			//模式2:8位自动重载定时器
			case 2: TMOD |= 0x02;
							TL0 = (256-200);
							TH0 = (256-200);
			//模式3:TH0和TL0为两个独立的8位定时器
			case 3: TMOD |= 0x03;
							TL0 = (256-200);
							TH0 = (256-200);//TH0占用定时器中断
							TR1 = 1;
							ET1 = 1;
			default: break;
		}
		TR0 = 1;
		ET0 = 1;	//允许定时器0中断 
}

/******定时器1定时器模式初始化******/
//时钟是系统时钟的12分频
void Timer1_Init(void)
{
		switch(T1MODE)
		{
			//模式0：13位定时器，TL0的高3位无效
			case 0:	TMOD &= 0x0F;
							TH1 = (8192-2000)>>5;
							TL1 = (8192-2000) & 0x1F;
							break;
			//模式1：16位定时器
			case 1: TMOD |= 0x10;
							TH1 = (65536-2000)/256;
							TL1 = (65536-2000)%256;
							break;
			//模式2:8位自动重载定时器
			case 2: TMOD |= 0x20;
							TL1 = (256-200);
							TH1 = (256-200);
							break;
			default: break;
		}
//		TR1 = 1;
		ET1 = 1;	//允许定时器,1中断 	
}

/************定时器2初始化***********/
//时钟可选系统时钟的12分频和系统时钟
/* 注:
 * Timer2: 模式选择
 *		(1).重载模式0: 设置 DCEN = 0，CPRL2 = 0，如果 EXEN2 = 1，则 T2EX 边沿和计数溢出时将触发重载，否则只有计数溢出才能触发重载。
 * 		(2).重载模式1: 设置 DCEN = 1，CPRL2 = 0，此时 T2EX 为低时定时器递减计数，T2EX 为高时定时器递增计数。EXF2 标志不再产生中断，而是作为计数器得第 17 位翻转。    
 * 		(3).抓取模式:  设置 CPRL2 = 1， T2CM = 0，T2EX管脚边沿触发抓取; 设置 CPRL2 = 1， T2CM = 1，软件写入寄存器 T2CL 将触发一次抓取操作
 * 		(4).波特率产生器模式:
 * 		(5).时钟输出模式: 设置 T2OE = 1，此时定时器自动进入计数溢出重载模式T2 引脚输出频率为 2 倍溢出周期的时钟。此模式不能使用 T2 作为时钟输入。
 * Timer2: 管脚配置
 *		(1).计数功能, 使用 T2 输入时钟计数, 管脚T2(P10)设置为输入(P10F = 0x1;), T2MOD.2可选上/下沿计数
 * 		(2).时钟输出模式, 管脚T2(P10)设置为输出(P10F = 0x2;)               
 * 		(3).T2EX抓取或触发重载, 管脚T2EX(P11)设置为输入, T2MOD.3可选上/下沿触发重载或抓取
 */
void Timer2_Init(void)
{
		switch(T2MODE)
		{
/***********定时器2重载模式0************/
			case 0: T2CH = (65536-16000)/256;
							T2CL = (65536-16000)%256;
							TL2 = T2CL;
							TH2 = T2CH;
							T2MOD = 0+0x80;  //DCEN=0;
//							T2CON = 0x04;		//启动定时器2，CPRL2=0;EXEN2=0;只有当计数溢出才触发重载
							T2CON = 0x00;
							break;
/***********定时器2重载模式1************/
			case 1: T2CH = (65536-16000)/256;
							T2CL = (65536-16000)%256;
							TL2 = T2CL;
							TH2 = T2CH;
							T2MOD = 0x81;  //DCEN=1,T2IE=1定时器2中断使能;
							T2CON = 0x04;		//启动定时器2，CPRL2=0;EXEN2=0;只有当计数溢出才触发重载
							break;
/********* 定时器2硬件抓取 ***********/
			case 2: T2CH = 0;
							T2CL = 0;
							TL2 = T2CL;
							TH2 = T2CH;
							T2MOD = 0+0x80;  //定时器中断使能，T2CM=0：T2EX触发抓取，T2PS=0：下降沿有效
							T2CON = 0x04+0x08+0x1;//启动定时器，T2EX使能，抓取功能
							break;
/***********定时器2波特率产生器模式************/
			case 3: break;
/***********定时器2时钟输出模式************/
			case 4: T2CH = (65536-8)/256;
							T2CL = (65536-8)%256;
							TL2 = T2CL;
							TH2 = T2CH;
							T2MOD = 0x82;
							T2CON = 0x04+0x08;	
							break;
			default:break;
		}
		EINT2 = 1;//开启定时器2中断
}

///************定时器3初始化***********/
//void Timer3_Init(void)
//{
//		switch(T3MODE)
//		{
//			case 0:
//		}
//}
